02_code1/grade.txt
Grading at Tue Jun 11 23:21:47 UTC 2019
Checking code1.c for legal syntax
Checking for int max (int num1, int num2)
Found on line 3, column 1 
Checking for int main(void)
Found on line 15, column 1 
Trying to run the code..
Your file matched the expected output
Removing your main() and replacing it with our own to run more tests...
temp3.c: In function ‘_old_removed_main_’:
temp3.c:24:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Could not replace your main function to test further

Overall Grade: F
